--- a/src/components/UI/UiCss/ErrorBox.module.css
+++ b/src/components/UI/UiCss/ErrorBox.module.css
@@ -12,17 +12,24 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
-.errorBox p {
-    padding: 0.5rem;
-    font-size: 0.75rem;
-}
-
 .errorBox header {
     background-color: var(--dark-blue);
     color: var(--white);
     padding: 0.5rem;
     text-align: center;
+    max-width: 600px;
 }
+
+.errorBox header p {
+    width: 250px;
+    font-size: 1rem;
+}
+
+.errorBox .message {
+    padding: 0.5rem;
+    font-size: 0.75rem;
+}
+
 
 .button {
     margin-bottom: 1rem;
