--- a/src/pages/pages-css/Invoicing.module.css
+++ b/src/pages/pages-css/Invoicing.module.css
@@ -21,24 +21,36 @@
     font-size: 1.25rem;
 }
 
-.invoiceTable {
+.tableWrapper {
     width: 98vw;
     max-width: 1100px;
-    max-height: 60vh;
-    overflow-y: scroll;
     margin: 2rem auto 0rem auto;
+    max-height: 70vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border-bottom: 1px solid var(--dark-blue);
 }
 
-.invoiceTable .tableHead {
+.tableHead {
     background-color: var(--sea-blue);
     color: var(--white);
     display: flex;
     justify-content: space-between;
     padding: 0 0.5rem;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
+
+.invoiceTable {
+    height: fit-content;
+    width: 98vw;
+    max-width: 1100px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+}
+
 
 .label {
    text-align: center;
